syntax = "proto3";
option csharp_namespace = "Retro.Net.Api.RealTime.Messages.Command";

import "gameboy.command.messages.proto";

// A command sent from a connected GameBoy client.
message GameBoyCommand {

    oneof value {
		// Command to set the state of a GameBoy websocket connection.
        SetGameBoyClientState setState = 1;
        
		// Command to press a button on the GameBoy joypad.
		RequestGameBoyJoyPadButtonPress pressButton = 2;
    }
}